Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/booking-page.mdx
+++ b/app-builder/builder/pages/booking-page.mdx
@@ -13,7 +13,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image521_7660f97a1c.png"
     alt="Các kiểu bố cục hiển thị Booking: dọc, ngang, trượt ngang, tab danh mục, danh sách, nhóm danh mục"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title="Bố cục Booking"
   />
 </Frame>
@@ -30,7 +36,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image522_adf8f5fcfe.png"
         alt="Nút thêm dữ liệu mới trong giao diện Booking"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Nút thêm dữ liệu mới"
       />
     </Frame>
@@ -44,7 +56,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image523_80f9a0687f.png"
         alt="Giao diện nhập thông tin danh mục, banner và danh mục con cho Booking"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Thêm dữ liệu danh mục Booking"
       />
     </Frame>
@@ -65,7 +83,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image524_c3dab2290f.png"
         alt="Nút chỉnh sửa danh mục Booking trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Nút chỉnh sửa danh mục"
       />
     </Frame>
@@ -79,7 +103,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image525_928cc91e88.png"
         alt="Giao diện chỉnh sửa danh mục, ảnh và danh mục con trong Booking"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Trang chỉnh sửa dữ liệu"
       />
     </Frame>
@@ -100,7 +130,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image526_fa66659a6c.png"
         alt="Nút xóa danh mục Booking trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Nút xóa danh mục"
       />
     </Frame>
@@ -121,7 +157,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image528_2f84c4911f.png"
     alt="Ví dụ hiển thị tiêu đề phần Booking"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title="Tiêu đề Booking"
   />
 </Frame>
@@ -137,7 +179,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image529_9be3f42d57.png"
     alt="Ví dụ hiển thị tiêu đề phần Booking"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title="Tiêu đề Booking"
   />
 </Frame>
@@ -150,7 +198,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image530_e3a8306767.png"
     alt="Ví dụ hiển thị tiêu đề phần Booking"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title="Tiêu đề Booking"
   />
 </Frame>
@@ -163,7 +217,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image531_98aa1a6966.png"
     alt="Ví dụ hiển thị tiêu đề phần Booking"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title="Tiêu đề Booking"
   />
 </Frame>
@@ -182,7 +242,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image532_f4876aa58a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -202,7 +268,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image533_3837c7ee14.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -215,7 +287,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image534_7c646a5875.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -226,7 +304,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image535_f82a2ee523.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -237,7 +321,13 @@ hoặc **chỉnh riêng lẻ từng góc** bằng nút
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image536_f325984f25.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -254,7 +344,13 @@ hoặc **chỉnh riêng lẻ từng góc** bằng nút
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image537_86fcf04df3.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -287,7 +383,13 @@ hoặc **chỉnh riêng lẻ từng góc** bằng nút
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image538_e83c5e6628.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -300,7 +402,13 @@ hoặc **chỉnh riêng lẻ từng góc** bằng nút
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image539_a0b9d90055.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -311,7 +419,13 @@ hoặc **chỉnh riêng lẻ từng góc** bằng nút
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image540_830a80f9ee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -322,7 +436,13 @@ hoặc **chỉnh riêng lẻ từng góc** bằng nút
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image541_7e012a7e49.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -335,7 +455,13 @@ hoặc **chỉnh riêng lẻ từng góc** bằng nút
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image542_820bac9f28.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -346,7 +472,13 @@ hoặc **chỉnh riêng lẻ từng góc** bằng nút
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image543_c9a0efb888.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -357,7 +489,13 @@ hoặc **chỉnh riêng lẻ từng góc** bằng nút
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image544_e80825a05e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -369,7 +507,13 @@ hoặc **chỉnh riêng lẻ từng góc** bằng nút
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image545_043cfa37d4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -380,7 +524,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image546_ffa9d22fe4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -392,7 +542,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image547_15ac085dd5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -403,7 +559,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image548_921979d7dc.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -417,7 +579,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image549_9ab97ad04f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -428,7 +596,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image550_f1cf6f542a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -446,7 +620,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image551_d66e64858e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -457,7 +637,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image552_42a485f88f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -468,7 +654,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image553_86f09d6ed4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -481,7 +673,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image554_1e2fa2ea9c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -492,7 +690,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image555_8602e8af3d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -503,7 +707,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image556_73397203b5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -516,7 +726,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image557_5f719b2eb3.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -529,7 +745,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image558_f1c15854a9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -541,7 +763,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image559_d8fbf8006e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -555,7 +783,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image560_5b34e3e7e9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -566,7 +800,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image561_551737fccc.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -578,7 +818,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image562_ba47fa03e2.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -589,7 +835,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image563_8e537a2d54.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -603,7 +855,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image564_8cc066aa0a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -614,7 +872,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image565_a6a6b2d726.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -642,7 +906,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image566_6b25362776.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -659,7 +929,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image567_bb39db981f.png"
     alt="Tùy chọn hiển thị nút đặt lịch dạng icon hoặc button trong Booking"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title="Kiểu nút đặt lịch"
   />
 </Frame>
@@ -700,7 +976,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image568_e80ffad6e3.png"
     alt="Tùy chọn hiển thị nút đặt lịch dạng icon hoặc button trong Booking"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title="Kiểu nút đặt lịch"
   />
 </Frame>
@@ -713,7 +995,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image569_1a712a59ae.png"
     alt="Tùy chọn thẻ dịch vụ hiển thị theo chiều ngang hoặc dọc"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title="Kiểu thẻ dịch vụ"
   />
 </Frame>
