--- a/app-builder/builder/pages/category-page.mdx
+++ b/app-builder/builder/pages/category-page.mdx
@@ -13,7 +13,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image138_a4d6946512.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -30,7 +36,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image58_0b45699748.png"
         alt="Nút thêm dữ liệu mới trong giao diện danh mục"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Nút thêm dữ liệu mới"
       />
     </Frame>
@@ -45,7 +57,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image193_6ad7dde887.png"
         alt="Giao diện nhập thông tin và chọn ảnh cho danh mục"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Thêm dữ liệu danh mục"
       />
     </Frame>
@@ -66,7 +84,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image122_2ef90432aa.png"
         alt="Nút chỉnh sửa danh mục trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Nút chỉnh sửa danh mục"
       />
     </Frame>
@@ -81,7 +105,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image120_1cf0daec72.png"
         alt="Giao diện chỉnh sửa dữ liệu danh mục"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Trang chỉnh sửa danh mục"
       />
     </Frame>
@@ -102,7 +132,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image224_cc8180dc56.png"
         alt="Nút xóa danh mục trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
         title="Nút xóa danh mục"
       />
     </Frame>
@@ -123,7 +159,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image249_4f9b0222d5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -139,7 +181,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image136_9047a19af9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -152,7 +200,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image250_6fe411e83b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -165,7 +219,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image251_3a3e6062bf.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -184,7 +244,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image252_677543a21f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -208,7 +274,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image254_12a3c3b2c0.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -241,7 +313,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image253_3d68c384bc.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -254,7 +332,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image255_c39043c08b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -265,7 +349,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image256_20ab92d61a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -276,7 +366,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image257_97967f5328.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -289,7 +385,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image258_554a12da8f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -300,7 +402,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image259_3375d00379.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -311,7 +419,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image260_51fb417aed.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -324,7 +438,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image261_54c7aaf6f9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -335,7 +455,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image262_c995264c70.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -348,7 +474,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image268_eec0e03af2.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -359,7 +491,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image269_2b4257461d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -375,7 +513,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image270_27c94688ac.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -386,7 +530,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image271_468d26fecb.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -404,7 +554,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image272_57694a0e61.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -415,7 +571,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image273_c19d82bc9f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -426,7 +588,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image274_1a5852eabf.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -439,7 +607,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image275_e94c7d2d90.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -450,7 +624,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image276_e35cbd8765.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -461,7 +641,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image277_c13c76b01c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -472,7 +658,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image278_7306ee5c57.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -483,7 +675,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image279_8f24d1260d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -495,7 +693,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image280_3a362154cf.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -509,7 +713,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image281_98b2e13028.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -520,7 +730,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image282_98f498b01e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -532,7 +748,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image283_dd1752d925.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -543,7 +765,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image284_97dcac7c7a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -557,7 +785,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image285_41fb6c40b9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -568,7 +802,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image286_e2a485ccc9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -585,7 +825,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image287_7fc044e9ee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -596,7 +842,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image287_7fc044e9ee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -607,7 +859,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image288_c77772d6b2.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -620,7 +878,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image289_593423f22d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -633,7 +897,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image290_e2ae3ad3d5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
