--- a/app-builder/builder/pages/home.mdx
+++ b/app-builder/builder/pages/home.mdx
@@ -13,7 +13,13 @@ Người dùng nhấn nút “**Xem thêm**” để có thể chọn mẫu Head
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image129_3326f12a1f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -184,7 +190,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image88_99772ecfa8.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -195,7 +207,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image247_d65c8c9f28.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -208,7 +226,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image221_8acdfaedd4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -219,7 +243,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image248_ec7e664c78.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -232,7 +262,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image102_c0beb86e26.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
@@ -247,7 +283,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image87_32421d153c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -40px" 
+    }}
     title=""
   />
 </Frame>
